@@ -9,6 +9,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed POSTFIX_STYLE_VIRTUAL_DOMAINS to be case-insensitiive.
+      (LP: #1267003)
+
     - Added recognition for another simple warning to bounce processing.
       (LP: #1263247)
 
